--- a/messages_table.css
+++ b/messages_table.css
@@ -2,6 +2,10 @@ body {
     background-color: white;
 }
 
+#messages tr:hover td {
+background-color: rgba(128, 128, 140, 0.90);
+}
+
 #messages {
     border-collapse:collapse;
     border-spacing: 0;
@@ -48,11 +52,19 @@ body {
 #messages td:nth-child(2n+1) {
     background-color: #9e8e85;
     color: #f9f2e5
+    -webkit-transition: background-color 1s ease-out;
+    -moz-transition: background-color 1s ease-out;
+    -o-transition: background-color 1s ease-out;
+    transition: background-color 1s ease-out;
 }
 
 #messages td:nth-child(2n) {
     background-color: #f9f2e5;
     color: #1e1814;
+    -webkit-transition: background-color 1s ease-out;
+    -moz-transition: background-color 1s ease-out;
+    -o-transition: background-color 1s ease-out;
+    transition: background-color 1s ease-out;
 }
 
 #messages tr:first-child th:first-child {
